[tool.poetry]
name = "introduction_flask"
version = "0.1.0"
description = ""
authors = ["Takahiro Konno <t.konno@shishimaro.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
appnope = "0.1.0"
argon2-cffi = "20.1.0"
attrs = "20.1.0"
backcall = "0.2.0"
bleach = "3.1.5"
certifi = "2020.6.20"
cffi = "1.14.2"
chardet = "3.0.4"
click = "8.0.1"
decorator = "4.4.2"
defusedxml = "0.6.0"
docutils = "0.16"
entrypoints = "0.3"
Flask = "2.0.1"
greenlet = "0.4.16"
idna = "2.10"
ipykernel = "5.3.4"
ipython = "7.18.1"
ipython-genutils = "0.2.0"
itsdangerous = "2.0.1"
jedi = "0.17.2"
Jinja2 = "3.0.1"
json5 = "0.9.5"
jsonschema = "3.2.0"
jupyter-client = "6.1.7"
jupyter-core = "4.6.3"
jupyterlab = "2.2.6"
jupyterlab-server = "1.2.0"
MarkupSafe = "2.0.1"
mistune = "0.8.4"
msgpack = "1.0.0"
nbconvert = "5.6.1"
nbformat = "5.0.7"
notebook = "6.1.3"
packaging = "20.4"
pandocfilters = "1.4.2"
parso = "0.7.1"
pexpect = "4.8.0"
pickleshare = "0.7.5"
prometheus-client = "0.8.0"
prompt-toolkit = "3.0.7"
ptyprocess = "0.6.0"
pycparser = "2.20"
Pygments = "2.6.1"
pynvim = "0.4.1"
pyparsing = "2.4.7"
pyrsistent = "0.16.0"
python-dateutil = "2.8.1"
pyzmq = "19.0.2"
requests = "2.24.0"
rstcheck = "3.3.1"
Send2Trash = "1.5.0"
six = "1.15.0"
terminado = "0.8.3"
testpath = "0.4.4"
tornado = "6.0.4"
traitlets = "5.0.2"
urllib3 = "1.25.10"
wcwidth = "0.2.5"
webencodings = "0.5.1"
Werkzeug = "2.0.1"
torch = "^1.8.1"
torchvision = "^0.9.1"
torchaudio = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
